# prosemd-lsp

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: backend.rs  document.rs  main.rs  node_util.rs  parser.rs  validator.rs
vscode/: README.md  package-lock.json  package.json
vscode/src/: download.ts  extension.ts  util.ts
